2005-04-29  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Remove some old debug code that was
	causing flicker with the new double buffering code.

2005-04-29  John BouAntoun  <jba-mono@optusnet.com.au>

	* MonthCalendar.cs, DateTimePicker.cs: Made monthcalendar dropdwon
	behave like combobox and comboboxlist (still not sure if this is
	correct though).

2005-04-28  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Don't fill the middle of progress
	bars. This fills areas outside of the clip bounds that don't need
	to be filled.

2005-04-28  Jackson Harper  <jackson@ximian.com>

	* Control.cs: Don't expose functionality to touch the image buffers.
	* ProgressBar.cs:
	* ListView.cs: We do not need to (and no longer can) manipulate
	the image buffers directly. All of this is handled by Control.

2005-04-28  Peter Bartok  <pbartok@novell.com>

	* RichTextBoxSelectionAttribute.cs, RichTextBoxSelectionTypes.cs,
	  RichTextBoxScrollBars.cs, RichTextBoxStreamType.cs, 
	  RichTextBoxFinds.cs, RichTextBoxWordPunctuations.cs: Added

2005-04-28  Jordi Mas i Hernandez <jordi@ximian.com>

	* Combobox: 
		- Adjust control's height for non-simple comboboxes (bug fix)
		- Remove dead code
	* MenuAPI.cs: remove unused var
	* ScrollBar.cs: remove unsed var
		 
	* ListBox.cs: unselect items when clearing

2005-04-28  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListControl.cs: honors OnPositionChanged and default Selected Item
	* ListBox.cs: unselect items when clearing

2005-04-27  Jackson Harper  <jackson@ximian.com>

	* X11Keyboard.cs: Initialize a default keyboard and give a warning
	if a "correct" keyboard is not found. This will make us not crash,
	but might give some users bad keyboard layouts...seems to be the
	same thing rewind does.

2005-04-27  Jackson Harper  <jackson@ximian.com>

	* BindingManagerBase.cs: Attach the current/position changed
	handlers to their respective events.

2005-04-27  Jackson Harper  <jackson@ximian.com>
